2007-06-27  Maynard Johnson <maynardj@us.ibm.com>

	* ChangeLog: ChangeLog cleanup

2007-06-15  Maynard Johnson <maynardj@us.ibm.com>

	* doc/opreport.xsd:
	* libpp/xml_utils.cpp: Bump schema version to 2.0 to coincide with
	  callgraph elements added recently to the schema

2007-06-13  Maynard Johnson <maynardj@us.ibm.com>

	* doc/oprofile.xml:
	* events/Makefile.am:
	* events/ppc64/power5++/event_mappings:
	* events/ppc64/power5++/events:
	* events/ppc64/power5++/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/opcontrol:
	* utils/ophelp.c: Add support for POWER5++ (i.e., POWER5+ with PMU
	  set to POWER6 mode)

2007-06-12  dean gaudet  <dean@arctic.org>

	* events/i386/core_2/events:
	* events/i386/core_2/unit_masks:  updates to match
	  253669-022US ISA vol 3B from Intel.  (Including fix
	  for #1580064 from Arun Sharma.)

2007-06-08  dean gaudet  <dean@arctic.org>

	* events/x86-64/hammer/events:
	* events/x86-64/hammer/unit_masks: updates from December 2006
	  AMD update

2007-05-31  Maynard Johnson <maynardj@us.ibm.com>

	* libpp/symbol.h:
	* libutil++/bfd_support.h:
	* m4/cellspubfdsupport.m4: Fixups for compile failures on older Linux
	  distributions

2007-05-29  Dave Nomura  <dcnltc@us.ibm.com>

	* libregex/demangle_symbol.cpp: Strip off leading '.' generated for elf6r-powerpc targets in mangled symbol names.

2007-05-24  Richard Purdie  <rpurdie@openedhand.com>

	* events/arm/xscale1/events:
	* events/arm/xscale2/events: Add extra Xscale PMU event definitions

2007-05-24  Richard Purdie  <rpurdie@openedhand.com>

	* events/arm/armv6/events:
	* events/arm/armv6/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/ophelp.c: Name ARM11 support to be consistent with the kernel,
	  remove some duplicate code and add some extra events

2007-05-24  Richard Purdie  <rpurdie@openedhand.com>

	* oprofile/pp/oparchive.cpp: If the debug files have the same name